--- a/templates/donors/search_tissue_samples.html
+++ b/templates/donors/search_tissue_samples.html
@@ -162,7 +162,12 @@
                                     </div>
                                 </div>
                                 <div id="country-card" class="card my-2">
-                                    <div class="card-header">Country of Residency
+                                    <div class="card-header">Country of Residence
+                                        <i class="fa-solid fa-circle-question info-color small" data-bs-toggle="tooltip"
+                                           data-bs-html="true"
+                                           data-bs-placement="right"
+                                           title="<div class='text-start'>Country of residence at the time of the accident</div>"></i>
+
                                         <button type="button"
                                                 class="btn btn-reset btn-sm btn-outline-secondary float-end"
                                                 data-target="#country-card">Reset
@@ -270,8 +275,7 @@
                                         <i class="fa-solid fa-circle-question info-color small" data-bs-toggle="tooltip"
                                            data-bs-html="true"
                                            data-bs-placement="right"
-                                           title="<div class='text-start'>Residency refers to residence at the time of the accident</div>"></i>
-
+                                           title="<div class='text-start'>Residency refers to residence at the time of the accident.<br>Exposed oblasts include:<ul><li>Kaluga</li><li>Tula</li><li>Orel</li><li>Bryansk</li><li>Kiev</li><li>Rovno</li><li>Chercassy</li><li>Zhytomyr</li><li>Chernigov</li><li>Sumy</li><li>Pripyat</li></ul></div>"></i>
                                         <button type="button"
                                                 class="btn btn-reset btn-sm btn-outline-secondary float-end"
                                                 data-target="#residency-card">Reset
