--- a/templates/donors/filter_saved_searches.html
+++ b/templates/donors/filter_saved_searches.html
@@ -1,5 +1,5 @@
-<div id="delete_success_message" class="text-primary fw-bold mb-2">{{ message.success }}</div>
-<div id="delete_error_message" class="text-danger fw-bold mb-2">{{ message.error }}</div>
+<div id="delete_success_message" class="text-primary text-end fw-bold mb-2">{{ message.success }}</div>
+<div id="delete_error_message" class="text-danger text-end fw-bold mb-2">{{ message.error }}</div>
 <table id="saved_searches_tbl" class="table table-striped" style="width:100%">
     <thead>
     <tr>
