--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -128,7 +128,7 @@
                         Dashboard
                     </a>
                     <a class="nav-link {% if 'search_tissue_samples' in request.path or '_search_facility' in request.path %} active {% endif %}"
-                       href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
+                       href="{% url 'search_tissue_samples' %}">Search Samples</a>
                     <a class="nav-link {% if 'saved_searches/' in request.path %} active {% endif %}"
                        href="{% url 'saved_searches' %}">My Saved Searches</a>
 
