django-allauth pkg 0.41.0-->0.54.0 django-two-factor-auth pkg 1.15.1 --> 1.15.2 removal of phonenumbers pkg site footer update

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,7 +73,12 @@ body {
     color: white;
 }
 
-main a, footer a, .nav-link{
+footer, footer a{
+    color: whitesmoke;
+    font-size: 1rem;
+}
+
+main a, .nav-link{
     text-decoration: none;
     color: #4d6ea0;
 }
