--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -31,7 +31,7 @@
             </div>
             <div id="general-message">
                 {% if title %}
-                    <div class="alert alert-light alert-dismissible fade show border rounded"><i
+                    <div class="alert alert-primary alert-dismissible fade show"><i
                             class="fas fa-check-circle"></i>
                         Search '{{ title }}' is loaded
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
