--- a/templates/donors/intake_form.html
+++ b/templates/donors/intake_form.html
@@ -1,6 +1,6 @@
 <div class="py-3 px-5">
-    <h4 class="mb-4 text-center my-2">Information for applicants for access to materials and/or
-        information from the CTB
+    <h4 class="mb-4 text-center my-2">Information for Applicants for Access to Materials and/or
+        Information from the CTB
     </h4>
     {% if not pdf %}
         <div class="border border-secondary rounded-1 p-3 my-3">
