--- a/templates/donors/intake_form_wrapper.html
+++ b/templates/donors/intake_form_wrapper.html
@@ -24,7 +24,7 @@
             margin-left: 1rem !important
         }
     </style>
-    <title>INFORMATION FOR APPLICANTS FOR ACCESS TO MATERIALS AND/OR INFORMATION FROM THE CTB</title>
+    <title>Information for Applicants for Access to Materials and/or Information from the CTB</title>
 </head>
 <body>
 <div class="container py-3">
