--- a/templates/donors/my_applications.html
+++ b/templates/donors/my_applications.html
@@ -1,9 +1,9 @@
-<table id="my_applications_tbl" class="table table-striped small" style="width:100%">
+<table id="my_applications_tbl" class="table table-striped" style="width:100%">
     <thead>
     <tr>
         <th>Submitted Date</th>
         <th>Application</th>
-        <th>Attached Summary</th>
+        <th title="Attached Summary"></th>
     </tr>
     </thead>
     <tbody>
