--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -33,7 +33,7 @@
                 <h5>Clinical Search Facility</h5>
                 <div id="general-message">
                     {% if title %}
-                        <div role="alert" class="alert alert-light alert-dismissible fade show fst-italic border"><i
+                        <div role="alert" class="alert alert-primary alert-dismissible fade show fst-italic"><i
                                 class="fas fa-check-circle"></i>
                             Search '{{ title }}' is loaded
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
