--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="border rounded bg-light p-3">
                     <h6 class="bold">
-                        Saved Searches
+                        My Saved Searches
                     </h6>
                     <hr>
                     {% include 'donors/filter_saved_searches.html' %}
@@ -122,7 +122,7 @@
                 <div class="border rounded bg-light p-3">
                     <div>
                         <h6>
-                            Submissions
+                            My Submissions
                         </h6>
                     </div>
                     <hr>
