static image path edited

--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -8,7 +8,7 @@
                         ©2023 National Cancer Institute (NCI) of the National Institutes of Health, Bethesda, Maryland 20892
                         <div><a href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html" target="_blank" rel="noopener noreferrer">HHS Vulnerability Disclosure</a>
 
-                         | This website is built and maintained by <a href="https://www.isb-cgc.org/" target="_blank" rel="noopener noreferrer"><img style="height: 24px;" alt="isb-cgc logo" src="/static/img/isb-cgc.png">ISB-CGC</a>
+                         | This website is built and maintained by <a href="https://www.isb-cgc.org/" target="_blank" rel="noopener noreferrer"><img style="height: 24px;" alt="isb-cgc logo" src="{% static 'img/isb-cgc.png' %}">ISB-CGC</a>
 
                         </div>
                     </div>
