update support email address open_file function logic adjusted

--- a/templates/accounts/account/account_inactive.html
+++ b/templates/accounts/account/account_inactive.html
@@ -17,7 +17,7 @@
                     <div class="fw-bold mb-2">Your CTB account has been deactivated.</div>
                     <div>
                         If you would like to reactivate your account or need more information regarding CTB policies on
-                        accounts, please contact <a href="mailto:feedback@isb-cgc.org">feedback@isb-cgc.org</a>
+                        accounts, please contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
                     </div>
                 </div>
             </div>
