--- a/templates/accounts/account/verification_sent.html
+++ b/templates/accounts/account/verification_sent.html
@@ -21,7 +21,7 @@
                         <p><b>Please Note:</b> Verification e-mails will only be sent once every 3 minutes. Additional
                             attempts to log in to send the message more frequently than this will not result in additional
                             e-mails.</p>
-                        <p>If the verification e-mail still doesn't come through, <b><a href="mailto:ctb-info@isb-cgc.org">contact us</a></b>
+                        <p>If the verification e-mail still doesn't come through, <b><a href="mailto:ctb-support@isb-cgc.org">contact us</a></b>
                             from your account's registered email address for assistance.</p>
                     </div>
                 </form>
