--- a/templates/ctb/contact.html
+++ b/templates/ctb/contact.html
@@ -37,7 +37,7 @@
                             NCI Shady Grove | Room 7E412<br>
                         </p>
 
-                        <div class="text-muted">Email: <a href="mailto:ctb-info@isb-cgc.org">ctb-info@isb-cgc.org</a>
+                        <div class="text-muted">Email: <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>
                         </div>
                         <div class="text-muted">Phone: 240-276-7150 </a>
                         </div>
