--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -87,8 +87,8 @@
                                         been justified
                                         in the application.</p>
                                     <p>If you have any queries, please email these to <a
-                                            href="mailto:ctb-info@isb-cgc.org"
-                                            target="_top">ctb-info@isb-cgc.org</a>.
+                                            href="mailto:ctb-support@isb-cgc.org"
+                                            target="_top">ctb-support@isb-cgc.org</a>.
                                         Online
                                         information using the search tools is available where you see the <i
                                                 class="fa-solid fa-circle-question info-color"></i> icon.
