--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -208,7 +208,7 @@
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
     <h5><a id="seven" class="anchor-section"></a>7. How do I get an answer to any other queries?</h5>
     <p>If you have any questions that are not covered in this fact sheet, please contact us at <a
-            href="mailto:ctb-info@isb-cgc.org">ctb-info@isb-cgc.org</a> and we will do our best to help you:</p>
+            href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> and we will do our best to help you:</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
 
 {% endblock %}
