--- a/templates/donors/application_post_submit.html
+++ b/templates/donors/application_post_submit.html
@@ -23,7 +23,7 @@
         {% endif %}
         {% if error %}
             <div class="p-3 mb-2 rounded-2 border border-2 border-warning">
-                <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting your application. Please try again or contact feedback@isb-cgc.org if you have any questions.
+                <i class="fa-solid fa-circle-exclamation text-secondary"></i> There was an error while submitting your application. Please try again or contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> if you have any questions.
                 <div class="font-monospace text-muted bg-light rounded-2 p-2 mt-2 small">[ERROR] {{ error }}</div>
             </div>
         {% endif %}
