--- a/templates/donors/search_tissue_samples.html
+++ b/templates/donors/search_tissue_samples.html
@@ -101,7 +101,7 @@
                                             <i class="fa-solid fa-circle-question info-color" data-bs-toggle="tooltip"
                                                data-bs-html="true"
                                                data-bs-placement="right"
-                                               title="<div class='text-start'> There are small numbers of other tumors that are categorised by the Pathology Panel in the following way:<br><ol><li>Well differentiated carcinoma not otherwise specified<li>Poorly differentiated carcinoma<li>Two synchronous tumors sampled from the same patient<li>Other</ol>If you wish to request any of these please email us (ctb-info@isb-cgc.org).</div>">
+                                               title="<div class='text-start'> There are small numbers of other tumors that are categorised by the Pathology Panel in the following way:<br><ol><li>Well differentiated carcinoma not otherwise specified<li>Poorly differentiated carcinoma<li>Two synchronous tumors sampled from the same patient<li>Other</ol>If you wish to request any of these please email us (ctb-support@isb-cgc.org).</div>">
                                             </i>
                                             Other special tumors
                                         </div>
