--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!--
 
- Copyright 2022, Institute for Systems Biology
+ Copyright 2023, Institute for Systems Biology
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -60,7 +60,7 @@
     <div class="page-heading">
         {% block page_header %}{% endblock %}
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid m-0 p-0">
         <!-- Site Messages -->
         <div class="row">
             <div class="col" style="z-index: 100;">
