--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
-<footer class="mt-auto bg-secondary">
+<footer class="mt-auto">
     <div class="container">
-        <div class="p-2 my-1">
+        <div class="px-2 py-3 my-1">
             <div class="row">
                 <div class="col-10">
                     <div>
