--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -3,16 +3,16 @@
 
 {% is_allowed user as has_access %}
 
-<nav id="ctb-main-navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
+<nav id="ctb-main-navbar" class="navbar navbar-expand-lg fixed-top navbar-dark py-4" aria-label="Main navigation">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'landing_page' %}">Home</a>
+        <a class="navbar-brand {% if request.path == '/' %} active {% endif %}" href="{% url 'landing_page' %}"><i class="fas fa-home"></i></a>
         <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
                 data-bs-target="#ctb-collapsible-navbar"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="ctb-collapsible-navbar">
-            <ul class="navbar-nav me-auto">
+            <ul class="navbar-nav col-10 justify-content-evenly">
                 <li class="nav-item">
                     <a class="nav-link
                         {% if 'search_facility' in request.path %} active {% endif %}"
@@ -20,7 +20,7 @@
                         {% else %}
                         href="{% url 'two_factor:login' %}"
                         {% endif %}>
-                        CTB Biosample Search Facility
+                        Biosample Search
                     </a>
                 </li>
 
@@ -75,7 +75,7 @@
                        href="{% url 'contact' %}">Contact Us</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav col-1">
                 {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle {% if 'users/' in request.path or 'account' in request.path %} active {% endif %}"
